hotfix: fix vertical text in Experience section on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -432,6 +432,7 @@
   .experience__title {
     position: static;
     transform: none;
+    writing-mode: horizontal-tb;
     width: 100%;
     margin-bottom: var(--spacing-24);
   }
